--- a/FarmProduct.Web/Views/AgriculturalProduct/Detail.cshtml
+++ b/FarmProduct.Web/Views/AgriculturalProduct/Detail.cshtml
@@ -9,7 +9,7 @@
     <!-- Start Content Box -->
     <div class="content-box-header">
         <h3>
-            编辑农产品</h3>
+           查看农产品信息</h3>
         <ul class="content-box-tabs">
             
         </ul>
