--- a/FarmProduct.Web/Views/Home/Index.cshtml
+++ b/FarmProduct.Web/Views/Home/Index.cshtml
@@ -3,10 +3,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>
-    Welcome John</h2>
+    赣农畜产品监管系统</h2>
 <p id="page-intro">
-    What would you like to do?</p>
-<ul class="shortcut-buttons-set">
+    你准备做什么呢？</p>
+<ul class="shortcut-buttons-set" style="display:none">
     <li><a class="shortcut-button" href="#"><span>
         <img src="@Url.Content("~/Content/images/icons/pencil_48.png")" alt="icon" /><br />
         Write an Article </span></a></li>
