--- a/FarmProduct.Web/Views/Account/LogOn.cshtml
+++ b/FarmProduct.Web/Views/Account/LogOn.cshtml
@@ -28,7 +28,7 @@
                 <h1>
                     赣农畜产品监管系统</h1>
                 <!-- Logo (221px width) -->
-                <img id="logo" src="@Url.Content("~/Content/images/logo.png")" alt="Simpla Admin logo" />
+                <img id="logo" src="@Url.Content("~/Content/images/logo.jpg")" alt="Simpla Admin logo" />
             </div>
             <!-- End #logn-top -->
             <div id="login-content">
