--- a/FarmProduct.Web/Views/RetailProduct/CanRetail.cshtml
+++ b/FarmProduct.Web/Views/RetailProduct/CanRetail.cshtml
@@ -1,7 +1,7 @@
 ﻿@using FarmProduct.Model
-@model FarmProduct.Web.Models.ListViewModel<WholeSaleProduct>
+@model FarmProduct.Web.Models.ListViewModel<RetailProduct>
 @{
-    ViewBag.Title = "我的可分割产品";
+    ViewBag.Title = "可销售产品列表";
     int j = 0;
     string strStyle = "";
 }
@@ -9,9 +9,9 @@
     <!-- Start Content Box -->
     <div class="content-box-header">
         <h3>
-            可分割产品列表</h3>
+            可销售产品列表</h3>
         <ul class="content-box-tabs">
-            <li><a href="@Url.Action("CanSale", "WholeSaleProdut")" class="default-tab">未批发产品</a></li>
+            <li><a href="@Url.Action("RetailedProduct", "RetailProduct")" class="default-tab">已销售产品</a></li>
         </ul>
         <div class="clear">
         </div>
@@ -20,14 +20,7 @@
     <div class="content-box-content">
         <div class="tab-content default-tab" id="tab1">
             <!-- This is the target div. id must match the href of this div's tab -->
-            <div class="notification attention png_bg">
-                <a href="#" class="close">
-                    <img src="@Url.Content("~/Content/images/icons/cross_grey_small.png")" title="Close this notification"
-                        alt="close" /></a>
-                <div>
-                    这是你公司可分割的产品列表
-                </div>
-            </div>
+            
             <table>
                 <thead>
                     <tr>
@@ -55,31 +48,31 @@
                     <tr>
                         <td colspan="6">
                             <div class="pagination">
-                                <a href="@Url.Action("MyWholeSaleProduct", new { pageIndex = 1 })" title="First Page">&laquo;
+                                <a href="@Url.Action("CanRetail", new { pageIndex = 1 })" title="First Page">&laquo;
                                     First</a>
                                 @if (Model.CurrentPageIndex > 1)
                                 {
-                                    <a href="@Url.Action("MyWholeSaleProduct", new { pageIndex = @Model.CurrentPageIndex - 1 })" title="Previous Page">
+                                    <a href="@Url.Action("CanRetail", new { pageIndex = @Model.CurrentPageIndex - 1 })" title="Previous Page">
                                         &laquo; Previous</a> 
                                 }
                                 @for (int i = 1; i <= Model.PageCount; i++)
                                 {
                                     if (Model.CurrentPageIndex == i)
                                     {
-                                    <a href="@Url.Action("MyWholeSaleProduct", new { pageIndex = i })" class="number current" title="@i">@i</a>
+                                    <a href="@Url.Action("CanRetail", new { pageIndex = i })" class="number current" title="@i">@i</a>
                                     }
                                     else
                                     {
-                                    <a href="@Url.Action("MyWholeSaleProduct", new { pageIndex = i })" class="number" title="1">@i</a>
+                                    <a href="@Url.Action("CanRetail", new { pageIndex = i })" class="number" title="1">@i</a>
                                     }
 
                                 }
                                 @if (Model.CurrentPageIndex < Model.PageCount)
                                 {
-                                    <a href="@Url.Action("MyWholeSaleProduct", new { pageIndex = @Model.CurrentPageIndex + 1 })" title="Next Page">
+                                    <a href="@Url.Action("CanRetail", new { pageIndex = @Model.CurrentPageIndex + 1 })" title="Next Page">
                                         Next &raquo;</a>
                                 }
-                                <a href="@Url.Action("MyWholeSaleProduct", new { pageIndex = @Model.PageCount })" title="Last Page">
+                                <a href="@Url.Action("CanRetail", new { pageIndex = @Model.PageCount })" title="Last Page">
                                     Last &raquo;</a>
                             </div>
                             <!-- End .pagination -->
@@ -117,13 +110,12 @@
                             </td>
                             <td>
                                 <!-- Icons -->
-                                <a href="@Url.Action("Detail", "WholeSaleProduct", new { id = @item.Id })" title="查看" target="_blank">
+                                <a href="@Url.Action("Detail", "RetailProduct", new { id = @item.Id })" title="查看" target="_blank">
                                     查看</a>
-                                @if (item.ProductStatus == ProductStatus.WholeSale && item.SecurityStatus == SecurityStatus.Safe)
+                                @if ((item.ProductStatus == ProductStatus.Retail || item.ProductStatus == ProductStatus.CanRetail) && item.SecurityStatus == SecurityStatus.Safe)
                                 {
-                                    <a href="@Url.Action("Cut", "WholeSaleProduct", new { agriculturalProductId = @item.AgriculturalProductId, parentId = @item.Id })" title="分割">
-                                    分割</a>
-                                    
+                                    <a href="@Url.Action("Retail", "RetailProduct", new { id = @item.Id })" title="销售">
+                                    销售</a>
                                     <a href="javascript:;" onclick="deleteProduct(@item.Id)" title="Delete">
                                         <img src="@Url.Content("~/Content/images/icons/cross.png")" alt="Delete" /></a>
                                 }
@@ -155,7 +147,7 @@
                     alert(response.ErrorMessage);
                 }
                 else {
-                    window.location.href = '@Url.Action("MyWholeSaleProduct") '
+                    window.location.href = '@Url.Action("CanRetail") '
                 }
             }
         });
