--- a/FarmProduct.Web/Views/RetailProduct/Create.cshtml
+++ b/FarmProduct.Web/Views/RetailProduct/Create.cshtml
@@ -1,9 +1,8 @@
-﻿@model FarmProduct.Web.Models.WholeSaleProductEditModel
+﻿@model FarmProduct.Web.Models.RetailProductEditModel
 @{
     ViewBag.Title = "批发产品";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <div class="content-box">
     <!-- Start Content Box -->
     <div class="content-box-header">
@@ -16,21 +15,32 @@
         </div>
     </div>
     <div class="content-box-content">
-        <div style="color:Red">
-        @Html.ValidationSummary(true, "")
+        <div style="color: Red">
+            @Html.ValidationSummary(true, "")
         </div>
         <div class="tab-content default-tab" id="tab2">
-            @using (Html.BeginForm("Create", "WholeSaleProduct", FormMethod.Post, new { @class = "form" }))
+            @using (Html.BeginForm("Create", "RetailProduct", FormMethod.Post, new { @class = "form" }))
             {
                 @Html.HiddenFor(model => model.AgriculturalProductId)
+                @Html.HiddenFor(model => model.WholeSaleProductId)
                 <fieldset>
                     <!-- Set class to "column-left" or "column-right" on fieldsets to divide the form into columns -->
+                    <p>
+                        <label>
+                            原始农产品名称</label>
+                         @Html.TextBoxFor(model => model.AgriculturalProductName, new { @class = "text-input small-input datepicker", @readonly = "readonly" })
+                    </p>
+                    <p>
+                        <label>
+                            批发产品名称</label>
+                        @Html.TextBoxFor(model => model.WholeSaleProductName, new { @class = "text-input small-input datepicker", @readonly = "readonly" })
+                    </p>
                     <p>
                         <label>
                             产品名字</label>
                         @Html.TextBoxFor(model => model.ProductName, new { @class = "text-input small-input datepicker" })
                         <span class="input-notification success png_bg">必须输入</span>
-                        @Html.ValidationMessageFor(m=>m.ProductName)
+                        @Html.ValidationMessageFor(m => m.ProductName)
                     </p>
                     <p>
                         <label>
@@ -43,7 +53,7 @@
                         <label>
                             批发至</label>
                         @Html.DropDownList("ToCompanyId", new SelectList(Model.ToCompanyList, "Id", "CompanyName"), "请选择企业")
-                        @Html.ValidationMessageFor(m=>m.ToCompanyId)
+                        @Html.ValidationMessageFor(m => m.ToCompanyId)
                     </p>
                     <p>
                         <input class="button" type="submit" value="保存" />
@@ -56,4 +66,3 @@
         </div>
     </div>
 </div>
-
