--- a/FarmProduct.Web/Views/WholeSaleProduct/CanSaleProduct.cshtml
+++ b/FarmProduct.Web/Views/WholeSaleProduct/CanSaleProduct.cshtml
@@ -1,7 +1,7 @@
 ﻿@using FarmProduct.Model
 @model FarmProduct.Web.Models.ListViewModel<WholeSaleProduct>
 @{
-    ViewBag.Title = "我的可分割产品";
+    ViewBag.Title = "可批发产品列表";
     int j = 0;
     string strStyle = "";
 }
@@ -9,9 +9,9 @@
     <!-- Start Content Box -->
     <div class="content-box-header">
         <h3>
-            可分割产品列表</h3>
+            可批发割产品列表</h3>
         <ul class="content-box-tabs">
-            <li><a href="@Url.Action("CanSale", "WholeSaleProdut")" class="default-tab">未批发产品</a></li>
+            <li><a href="@Url.Action("CanSale", "WholeSaleProdut")" class="default-tab">已批发产品</a></li>
         </ul>
         <div class="clear">
         </div>
@@ -25,7 +25,7 @@
                     <img src="@Url.Content("~/Content/images/icons/cross_grey_small.png")" title="Close this notification"
                         alt="close" /></a>
                 <div>
-                    这是你公司可分割的产品列表
+                    这是你公司可批发的产品列表
                 </div>
             </div>
             <table>
@@ -119,10 +119,10 @@
                                 <!-- Icons -->
                                 <a href="@Url.Action("Detail", "WholeSaleProduct", new { id = @item.Id })" title="查看" target="_blank">
                                     查看</a>
-                                @if (item.ProductStatus == ProductStatus.WholeSale && item.SecurityStatus == SecurityStatus.Safe)
+                                @if ((item.ProductStatus == ProductStatus.WholeSale ||  item.ProductStatus == ProductStatus.CanWholeSale) && item.SecurityStatus == SecurityStatus.Safe)
                                 {
-                                    <a href="@Url.Action("Cut", "WholeSaleProduct", new { agriculturalProductId = @item.AgriculturalProductId, parentId = @item.Id })" title="分割">
-                                    分割</a>
+                                    <a href="@Url.Action("Create", "RetailProduct", new { wholeSaleId = @item.Id })" title="查看" >
+                                    批发</a>
                                     
                                     <a href="javascript:;" onclick="deleteProduct(@item.Id)" title="Delete">
                                         <img src="@Url.Content("~/Content/images/icons/cross.png")" alt="Delete" /></a>
